[gd_scene load_steps=4 format=3 uid="uid://cndiwhcn4w421"]

[ext_resource type="Script" uid="uid://ddngeoi3dy0aq" path="res://scripts/ui/hotbar.gd" id="1_m1s8h"]
[ext_resource type="PackedScene" uid="uid://mil6hi586vw6" path="res://scenes/ui/item_slot.tscn" id="1_yjdhc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m1s8h"]

[node name="Hotbar" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_m1s8h")
script = ExtResource("1_m1s8h")

[node name="HotbarSlotContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemSlot1" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot2" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot3" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot4" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot5" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot6" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot7" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot8" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2

[node name="ItemSlot9" parent="HotbarSlotContainer" instance=ExtResource("1_yjdhc")]
layout_mode = 2
